syntax = "proto3";

package message;

service MessageService {
  rpc SendMessage(SendMessageRequest) returns (MessageResponse);
  rpc GetMessageHistory(GetMessageHistoryRequest) returns (MessageHistoryResponse);
  rpc GetRooms(GetRoomsRequest) returns (RoomsResponse);
  rpc CreateRoom(CreateRoomRequest) returns (RoomResponse);
  rpc JoinRoom(JoinRoomRequest) returns (RoomResponse);
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
}

message SendMessageRequest {
  string userId = 1;
  string roomId = 2;
  string content = 3;
  string messageType = 4; // text, image, file
  optional string metadata = 5;
}

message GetMessageHistoryRequest {
  string roomId = 1;
  string userId = 2;
  int32 page = 3;
  int32 limit = 4;
}

message GetRoomsRequest {
  string userId = 1;
}

message CreateRoomRequest {
  string name = 1;
  string description = 2;
  string createdBy = 3;
  string roomType = 4; // public, private, direct
}

message JoinRoomRequest {
  string userId = 1;
  string roomId = 2;
}

message HealthCheckRequest {}

message MessageResponse {
  bool success = 1;
  string message = 2;
  optional MessageData messageData = 3;
  optional string error = 4;
}

message MessageHistoryResponse {
  bool success = 1;
  string message = 2;
  repeated MessageData messages = 3;
  optional PaginationInfo pagination = 4;
  optional string error = 5;
}

message RoomsResponse {
  bool success = 1;
  string message = 2;
  repeated RoomData rooms = 3;
  optional string error = 4;
}

message RoomResponse {
  bool success = 1;
  string message = 2;
  optional RoomData room = 3;
  optional string error = 4;
}

message HealthCheckResponse {
  bool success = 1;
  string message = 2;
  string service = 3;
  string version = 4;
  string timestamp = 5;
}

message MessageData {
  string id = 1;
  string userId = 2;
  string username = 3;
  string roomId = 4;
  string content = 5;
  string messageType = 6;
  optional string metadata = 7;
  string createdAt = 8;
  string updatedAt = 9;
}

message RoomData {
  string id = 1;
  string name = 2;
  string description = 3;
  string roomType = 4;
  string createdBy = 5;
  repeated string members = 6;
  string createdAt = 7;
  string updatedAt = 8;
}

message PaginationInfo {
  int32 currentPage = 1;
  int32 totalPages = 2;
  int32 totalItems = 3;
  int32 itemsPerPage = 4;
  bool hasNext = 5;
  bool hasPrevious = 6;
}
